<?xml version="1.0"?>
<package>
  <name>tld_turtlebot_follower</name>
  <version>0.0.0</version>
  <description>The tld_turtlebot_follower can make a turtlebot track a pre-specified target and follow it.
  </description>

  <maintainer email="minglong_l@163.com">Minglong Li</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>tld_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>tld_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
